5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1684_1101.log
== TEST (2019-04-29 13:15:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo= float(input("consumo:"))
tipo= input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kwh e tpio", tipo)

if ("consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("dados invalidos")
else:
	 if (tipo== "R"):
	 if(consumo <= 500):
	 preco = 0.44
	 
	 else:
	    preco= 0.65
	 
	 elif (tipo== "C"):
	    if (consumo <=1000):
	      preco= 0.55
	 
	 else:
	   preco= 0.60
	 
	 elif (tipo== "I"):
	   if (consumo <=5000):
	     preco= 0.55 

	 else:
	 preco= 0.60
	 valor=c consumo*preco
	 print("valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 10
    if ("consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:17:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo= float(input("consumo:"))
tipo= input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tpio", tipo)

if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("dados invalidos")
else:
	 if (tipo== "R"):
	 if(consumo <= 500):
	 preco = 0.44
	 
	 else:
	    preco= 0.65
	 
	 elif (tipo== "C"):
	    if (consumo <=1000):
	      preco= 0.55
	 
	 else:
	   preco= 0.60
	 
	 elif (tipo== "I"):
	   if (consumo <=5000):
	     preco= 0.55 

	 else:
	 preco= 0.60
	 valor=c consumo*preco
	 print("valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 14
    if(consumo <= 500):
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:18:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo= float(input("consumo:"))
tipo= input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tpio", tipo)

if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("dados invalidos")
else:
	 if (tipo== "R"):
	   if(consumo <= 500):
	 preco = 0.44
	 
	 else:
	    preco= 0.65
	 
	 elif (tipo== "C"):
	    if (consumo <=1000):
	      preco= 0.55
	 
	 else:
	   preco= 0.60
	 
	 elif (tipo== "I"):
	   if (consumo <=5000):
	     preco= 0.55 

	 else:
	 preco= 0.60
	 valor=c consumo*preco
	 print("valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 15
    preco = 0.44
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:20:01) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo= float(input("consumo:"))
tipo= input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tpio", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("dados invalidos")
else:
	 if (tipo== "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 else:
	      preco= 0.65
	 
	 elif (tipo== "C"):
	      if (consumo <=1000):
	         preco= 0.55
	 
	 else:
	   preco= 0.60
	 
	 elif (tipo== "I"):
	   if (consumo <=5000):
	       preco= 0.55 

	   else:
	   preco= 0.60
	   valor=c consumo*preco
	   print("valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 20
    elif (tipo== "C"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:22:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo= float(input("consumo:"))
tipo= input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tpio", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("dados invalidos")
else:
	 if (tipo== "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 else:
	      preco= 0.65
	 
	 elif (tipo== "C"):
	      if (consumo <= 1000):
	         preco= 0.55
	 
	 else:
	   preco= 0.60
	 
	 elif (tipo== "I"):
	   if (consumo <= 5000):
	       preco= 0.55 

	   else:
	   preco= 0.60
	   valor=c consumo*preco
	   print("valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 20
    elif (tipo== "C"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:25:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo= float(input("consumo:"))
tipo= input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tpio", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("dados invalidos")
else:
	 if (tipo== "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 else:
	      preco= 0.65
	 
	 elif (tipo== "C"):
	      if (consumo <= 1000):
	         preco= 0.55
	 
	 else:
	   preco= 0.60
	 
	 elif (tipo== "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   preco = 0.60
	   valor = consumo*preco
	   print("valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 20
    elif (tipo== "C"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:26:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo= float(input("consumo:"))
tipo= input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tpio", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("dados invalidos")
else:
	 if (tipo== "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 else:
	      preco = 0.65
	 
	 elif (tipo== "C"):
	      if (consumo <= 1000):
	         preco = 0.55
	 
	 else:
	   preco= 0.60
	 
	 elif (tipo== "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   preco = 0.60
	   valor = consumo*preco
	   print("valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 20
    elif (tipo== "C"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:02:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo= float(input("consumo:"))
tipo= input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("dados invalidos")
else:
	 if (tipo== "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 else:
	      preco = 0.65
	 
	 elif (tipo== "C"):
	      if (consumo <= 1000):
	         preco = 0.55
	 
	 else:
	   preco= 0.60
	 
	 elif (tipo== "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   preco = 0.60
	   valor = consumo*preco
	   print("valor total: R$", round(valor,2))


-- EXECUTION TIME:
0.220412
-- ERROR:
  File "/home/codebench/codes/1684/1101/main.py", line 20
    elif (tipo== "C"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:04:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo= float(input("consumo:"))
tipo= input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo== "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 else:
	      preco = 0.65
	 
	 elif (tipo== "C"):
	      if (consumo <= 1000):
	         preco = 0.55
	 
	 else:
	   preco= 0.60
	 
	 elif (tipo== "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   preco = 0.60
	   valor = consumo*preco
	   print("valor total: R$", round(valor,2))


-- EXECUTION TIME:
0.224118
-- ERROR:
  File "/home/codebench/codes/1684/1101/main.py", line 20
    elif (tipo== "C"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:05:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo= float(input("consumo:"))
tipo= input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo== "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 else:
	      preco = 0.65
	 
	 elif (tipo== "C"):
	      if (consumo <= 1000):
	         preco = 0.55
	 
	 else:
	   preco= 0.60
	 
	 elif (tipo== "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   preco = 0.60
	   valor = consumo*preco
	   print("Valor total: R$", round(valor,2))


-- EXECUTION TIME:
0.147078
-- ERROR:
  File "/home/codebench/codes/1684/1101/main.py", line 20
    elif (tipo== "C"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:05:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo= float(input("consumo:"))
tipo= input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo== "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 else:
	      preco = 0.65
	 
	 elif (tipo== "C"):
	      if (consumo <= 1000):
	         preco = 0.55
	 
	 else:
	   preco= 0.60
	 
	 elif (tipo== "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   preco = 0.60
	   valor = consumo*preco
	   print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 20
    elif (tipo== "C"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 18:06:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo= float(input("consumo:"))
tipo= input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 else:
	      preco = 0.65
	 
	 elif (tipo == "C"):
	      if (consumo <= 1000):
	         preco = 0.55
	 
	 else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   preco = 0.60
	   valor = consumo*preco
	   print("Valor total: R$", round(valor,2))


-- EXECUTION TIME:
0.174564
-- ERROR:
  File "/home/codebench/codes/1684/1101/main.py", line 20
    elif (tipo == "C"):
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:06:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo= float(input("consumo:"))
tipo= input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 else:
	      preco = 0.65
	 
	 elif (tipo == "C"):
	      if (consumo <= 1000):
	         preco = 0.55
	 
	 else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   preco = 0.60
	   valor = consumo*preco
	   print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 20
    elif (tipo == "C"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:07:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("consumo:"))
tipo = input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 else:
	      preco = 0.65
	 
	 elif (tipo == "C"):
	      if (consumo <= 1000):
	         preco = 0.55
	 
	 else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   preco = 0.60
	   valor = consumo*preco
	   print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 20
    elif (tipo == "C"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:07:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("consumo:"))
tipo = input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 else:
	      preco = 0.65
	 
	 elif (tipo == "C"):
	     if (consumo <= 1000):
	         preco = 0.55
	 
	 else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   preco = 0.60
	   valor = consumo*preco
	   print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 20
    elif (tipo == "C"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:07:47) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("consumo:"))
tipo = input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 else:
	      preco = 0.65
	 
	 elif (tipo == "C"):
	     if (consumo <= 1000):
	         preco = 0.55
	 
	 else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   preco = 0.60
	   valor = consumo*preco
	   print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 20
    elif (tipo == "C"):
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:09:55) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("consumo:"))
tipo = input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	 	else:
	      preco = 0.65
	 
	 elif (tipo == "C"):
	   if (consumo <= 1000):
	         preco = 0.55 
	 	else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   	preco = 0.60
	valor = consumo*preco
	print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 17
    else:
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:10:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("consumo:"))
tipo = input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
		 	else:
	      preco = 0.65
	 
	 elif (tipo == "C"):
	   if (consumo <= 1000):
	         preco = 0.55 
	 	else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   	preco = 0.60
	valor = consumo*preco
	print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 17
    else:
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:10:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("consumo:"))
tipo = input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
	else:
	      preco = 0.65
	 
	 elif (tipo == "C"):
	   if (consumo <= 1000):
	         preco = 0.55 
	 	else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   	preco = 0.60
	valor = consumo*preco
	print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 17
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:10:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("consumo:"))
tipo = input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
		else:
	      preco = 0.65
	 
	 elif (tipo == "C"):
	   if (consumo <= 1000):
	         preco = 0.55 
	 	else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   	preco = 0.60
	valor = consumo*preco
	print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 17
    else:
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:11:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("consumo:"))
tipo = input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
		else:
	      preco = 0.65
	 
	 elif (tipo == "C"):
	   if (consumo <= 1000):
	         preco = 0.55 
	 	else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   	preco = 0.60
	valor = consumo*preco
	print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 17
    else:
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 18:11:26) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("consumo:"))
tipo = input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
			else:
	    	  preco = 0.65
	 
	 elif (tipo == "C"):
	   if (consumo <= 1000):
	         preco = 0.55 
	 	else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   	preco = 0.60
	valor = consumo*preco
	print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 17
    else:
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:31:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("consumo:"))
tipo = input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
	 
		else:
	    	  preco = 0.65
	 
	 elif (tipo == "C"):
	   if (consumo <= 1000):
	         preco = 0.55 
	 	else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 

	   else:
	   	preco = 0.60
	valor = consumo*preco
print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 17
    else:
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 23:32:06) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("consumo:"))
tipo = input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
else:
	    	  preco = 0.65
	 
	 elif (tipo == "C"):
	   if (consumo <= 1000):
	         preco = 0.55 	 	
else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 
else:
	   	preco = 0.60
	valor = consumo*preco
print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 16
    else:
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 11:22:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

consumo = float(input("consumo:"))
tipo = input("tipo de instalacao: ").upper()

print("Entradas:", consumo, "kWh e tipo", tipo)
 
if (consumo < 0 or tipo != "R" and tipo != "C" and tipo != "I"):
	 print("Dados invalidos")
else:
	 if (tipo == "R"):
	   if(consumo <= 500):
	      preco = 0.44
   else:
	    preco = 0.65
	 
	 elif (tipo == "C"):
	   if (consumo <= 1000):
	         preco = 0.55 	 	
   else:
	   preco = 0.60
	 
	 elif (tipo == "I"):
	   if (consumo <= 5000):
	       preco = 0.55 
   else:
	   	preco = 0.60
	valor = consumo*preco
print("Valor total: R$", round(valor,2))


-- ERROR:
File "XXXX", line 16
    else:
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
